use envsubst to generalize options more