@@ -2,6 +2,8 @@
 
 echo "Building cryptomator cli..."
 
+APP_VERSION='0.1.0-local'
+
 # Check if Maven is installed
 if ! command -v mvn &> /dev/null; then
     echo "Maven is not installed. Please install Maven to proceed."
@@ -37,10 +39,11 @@ if [ $? -ne 0 ] || [ ! -d ./target/runtime ]; then
     exit 1
 fi
 
+JP_APP_VERSION='99.9.9'
+envsubst < dist/jpackage.args > target/jpackage.args
+
 echo "Creating app binary with jpackage..."
-"$JAVA_HOME/bin/jpackage" \
-    '@./dist/jpackage.args' \
-    --java-options "--enable-native-access=org.cryptomator.jfuse.mac"
+"$JAVA_HOME/bin/jpackage" '@./target/jpackage.args'
 
 if [ $? -ne 0 ] || [ ! -d ./target/cryptomator-cli.app ]; then
     echo "Binary creation with jpackage failed."
